--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-router": "^1.132.19",
     "@tanstack/react-router-devtools": "^1.132.19",
     "class-variance-authority": "^0.7.1",
@@ -33,7 +36,8 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.544.0",
     "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
