--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -4,7 +4,8 @@
     "src/renderer/src/types/env.d.ts",
     "src/renderer/src/**/*",
     "src/renderer/src/**/*.tsx",
-    "src/preload/*.d.ts"
+    "src/preload/*.d.ts",
+    "src/main/types/*.d.ts"
   ],
   "compilerOptions": {
     "composite": true,
@@ -12,6 +13,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/renderer/src/*"]
-    }
+    },
+    "types": ["unplugin-icons/types/react"]
   }
 }
